@@ -1,3 +1,13 @@
+2001-12-13  Marcus Brinkmann  <marcus@gnu.org>
+
+	* assuan-buffer.c (assuan_read_line): Fix order of execution to
+	get correct return values.
+
+2001-12-13  Werner Koch  <wk@gnupg.org>
+
+	* assuan-handler.c (assuan_get_active_fds): Fixed silly bug,
+	pretty obvious that nobody ever tested this function.
+
 2001-12-12  Werner Koch  <wk@gnupg.org>
 
 	* assuan-connect.c (assuan_pipe_connect): Implemented the inital
